fix(UI): fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,6 @@ html{
     padding: 16px;
 }
 
-*{
-
-    /*Hide x overflow*/
-    overflow-x: hidden;
-}
-
 
 /*Create title-bounce animation*/
 @keyframes title-bounce{
